--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="delete">Delete</string>
+    <string name="add">Add</string>
+    <string name="edit">Edit</string>
+    <string name="map">Map</string>
+    <string name="filter">Filter</string>
+    <string name="view_followers">View Followers</string>
+    <string name="follow">Follow</string>
+    <string name="requests">Requests</string>
+    <string name="view">View</string>
 </resources>
