--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="mood_tracker">Mood Tracker</string>
+    <string name="user">User:</string>
+    <string name="confirm">confirm</string>
+    <string name="username_here">username here</string>
+    <string name="return_to_mood_history">Return to Mood History</string>
 </resources>
