Add changes version on Firebase. Link to Add and View Activities from Moodlist. Displays sorted moodlist.

--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="confirm">confirm</string>
     <string name="username_here">username here</string>
     <string name="return_to_mood_history">Return to Mood History</string>
+    <string name="DateString">Date: %1$4d-%2$02d-%3$02d</string>
+    <string name="TimeString">Time: %1$02d:%2$02d</string>
 
 </resources>
