Added comments and tidied code

--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="DateString">Date: %1$4d-%2$02d-%3$02d</string>
     <string name="TimeString">Time: %1$02d:%2$02d</string>
     <string-array name="SocialSituations">
+        <item> </item>
         <item> ALONE </item>
         <item> WITH SOMEONE </item>
         <item> WITH MORE THAN 2 PEOPLE </item>
