--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">GLO</string>
     <string name="delete">Delete</string>
     <string name="add">Add</string>
     <string name="edit">Edit</string>
@@ -21,6 +21,7 @@
     <string name="Neutral">:|</string>
     <string name="Bad">:(</string>
     <string name="Worst">>:(</string>
+    <string name="mainTitleSplash">mainTitleSplash</string>
 
     <string-array name="SocialSituations">
         <item> </item>
