implemented updated teardown for delete

--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">GLO</string>
     <string name="delete">Delete</string>
     <string name="add">Add</string>
     <string name="edit">Edit</string>
@@ -16,11 +16,7 @@
     <string name="return_to_mood_history">Return to Mood History</string>
     <string name="DateString">Date: %1$4d-%2$02d-%3$02d</string>
     <string name="TimeString">Time: %1$02d:%2$02d</string>
-    <string name="Great">:D</string>
-    <string name="Good">:)</string>
-    <string name="Neutral">:|</string>
-    <string name="Bad">:(</string>
-    <string name="Worst">>:(</string>
+    <string name="mainTitleSplash">mainTitleSplash</string>
 
     <string-array name="SocialSituations">
         <item> </item>
